minor changes to package json

--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,10 @@
   "name": "mern",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+   "npm": "3.10.10",
+   "node": "6.11.3"
+ },
   "proxy": "http://localhost:3001/",
   "dependencies": {
     "axios": "^0.16.2",
